--- a/Style.css
+++ b/Style.css
@@ -1,22 +1,68 @@
 body{
-    padding: 0;
-    margin: 0;
-}
-h1{
+    padding: 0px;
+    margin: 0px;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 80px;
-    color: #fff;
-}
-p{
-    font-family: 'Noto Sans', sans-serif;
-    color: #fff;   
 }
 
 #banner{
-    background-image: url(Images/donation8.jpg);
+    background-image: url(Images/donation9.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 700px;
+    height: 900px;
     text-align: center;
+}
+#banner h1{
+    color: #fff;
+    font-size: 50px;
+}
+#banner p{
+    color: #fff;
+    margin: 35px;
+}
+#banner a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    background-color: tomato;
+    padding: 8px 10px;
+    border-radius: 5px;
+}
+#payment-section{
+    text-align: center;
+}
+#payment-section h1{
+    color: #000;
+    font-size: 80px;
+}
+#payment-section p{
+    color: #000;
+    font-size: 30px;
+}
+.packages{
+    display: inline-block;
+    margin: 8px 16px;
+    background-color: rgba(223, 223, 223, 0.587);
+    padding: 0px 20px;
+}
+#prices .packages h1{
+    font-size: 40px;
+    color: rgb(67, 64, 64);
+}
+#payment-section form input{
+   border: none;
+   border-bottom: 1px solid rgb(77, 77, 77);
+   width: 50%;
+   text-align: center;
+   padding: 20px;
+}
+#payment-section a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    background-color: tomato;
+    padding: 6px 8px;
+    border-radius: 5px;
+    margin: 20px 0px;
+    display: inline-block;
 }
