--- a/Style.css
+++ b/Style.css
@@ -11,10 +11,11 @@ body{
     background-size: cover;
     height: 900px;
     text-align: center;
+    padding: 50px 0px;
 }
 #banner h1{
     color: #fff;
-    font-size: 50px;
+    font-size: 80px;
 }
 #banner p{
     color: #fff;
@@ -147,4 +148,14 @@ body{
     border: none;
     background-color: tomato;
     color: #fff;
+}
+footer{
+    background-color: #023652;
+    text-align: center;
+    padding: 50px 0px;
+    height: 100%;
+    margin-top: 80px;
+}
+footer > h1{
+    color: tomato;
 }
